--- a/package.json
+++ b/package.json
@@ -18,24 +18,24 @@
         "helmet": "^3.22.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.20",
         "popper.js": "^1.12",
+        "query-string": "^6.8.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^6.0.0",
-        "readline": "^1.3.0",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0",
-        "query-string": "^6.8.2",
         "react-js-pagination": "^3.0.2",
         "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
-        "react-scripts": "^3.4.0",
+        "react-scripts": "^3.4.3",
         "react-spinners": "^0.5.13",
+        "readline": "^1.3.0",
         "redux": "^4.0.4",
         "redux-logger": "^3.0.6",
         "redux-promise-middleware": "^6.1.1",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
     }
 }
